# compiler-in-rust

./: .gitignore  Cargo.toml  README.md  index.js
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
compiler/: Cargo.toml
compiler-core/: Cargo.toml
compiler-core/benches/: tokeniser_benchmark.rs
compiler-core/src/: analyser.rs  ast.rs  binding_power.rs  code_gen.rs  keywords.rs  lib.rs  operators.rs  parser.rs  semantic_analysis.rs  tokeniser.rs  tokens.rs  wasm.rs
compiler-core/src/fixtures/: example_program.lang  fibonacci.lang  maths.lang
compiler-core/src/snapshots/: compiler_core__code_gen__tests__fixtures__example_program.snap  compiler_core__parser__tests__fixtures__example_program.snap  compiler_core__parser__tests__fixtures__functions.snap  compiler_core__parser__tests__fixtures__maths.snap  compiler_core__parser__tests__fixtures__strings.snap  compiler_core__tokeniser__tests__fixtures___fibonacci_.snap  compiler_core__tokeniser__tests__fixtures___functions_.snap  compiler_core__tokeniser__tests__fixtures___maths_.snap  compiler_core__tokeniser__tests__fixtures___strings_.snap  compiler_core__tokeniser__tests__fixtures__maths.snap  compiler_core__tokeniser__tests__fixtures__strings.snap  compiler_core__wasm__tests__module with two simple functions.snap
compiler-core/src/wasm/: format.rs  instruction.rs  mod.rs
compiler-core/src/wasm/snapshots/: compiler_core__wasm__tests__module with two simple functions.snap
compiler-frontend/: Cargo.toml
compiler-frontend/src/: main.rs
compiler/src/: code_gen.rs  keywords.rs  lib.rs  operators.rs  tokeniser.rs  tokens.rs  wasm.rs
compiler/src/snapshots/: lang_rs__tokeniser__tests__fixtures__functions.snap
online-playground/: Cargo.toml  build.sh  index.html  index.js  package.json
online-playground/src/: index.html  index.js  lib.rs
src/: ast.rs  binding_power.rs  code_gen.rs  main.rs  operators.rs  parser.rs  tokeniser.rs  tokens.rs  wasm.rs
src/fixtures/: example_program.lang  functions.lang  maths.lang  strings.lang
src/snapshots/: lang_rs__parser__tests__fixture_tests___src_fixtures_maths_lang_.snap  lang_rs__parser__tests__fixture_tests___src_fixtures_strings_lang_.snap  lang_rs__parser__tests__fixtures__functions.snap  lang_rs__parser__tests__fixtures__maths.snap  lang_rs__tokeniser__tests__add.snap  lang_rs__tokeniser__tests__fixture_tests___src_fixtures_maths_lang_.snap  lang_rs__tokeniser__tests__fixture_tests___src_fixtures_strings_lang_.snap  lang_rs__tokeniser__tests__fixtures__functions.snap  lang_rs__tokeniser__tests__fixtures__maths.snap  lang_rs__wasm__tests__module with two simple functions.snap
