[package]
name = "compiler_core"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "compiler_core"


[dependencies]
log = "0.4.8"
tinyvec = { version = "0.4.0", features = ["alloc"] }


[dev-dependencies]
insta = "0.16.1"
test-case = "1.0.0"
