[package]
name = "compiler_core"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "compiler_core"


[dependencies]
log = "0.4.11"
tinyvec = { version = "1.0.1", features = ["alloc"] }


[dev-dependencies]
insta = "1.1.0"
test-case = "1.0.0"
criterion = "0.3.3"


[[bench]]
name = "tokeniser_benchmark"
harness = false
