[package]
name = "compiler_core"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "compiler_core"


[dependencies]
log = "0.4.14"
tinyvec = { version = "1.2.0", features = ["alloc"] }


[dev-dependencies]
anyhow = "1.0.40"
criterion = "0.3.4"
insta = "1.7.1"
test-case = "2.0.2"
wasmtime = "0.26.0"


[[bench]]
name = "tokeniser_benchmark"
harness = false
