[package]
name = "compiler_frontend"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_core = { path = "../compiler-core" }
clap = "3.1.1"
anyhow = "1.0.40"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "fs"] }
