[package]
name = "lang-rs"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]


[dependencies]
clap = "2.33.0"
wasm-bindgen = "0.2.58"


[dev-dependencies]
insta = "0.13.1"
test-case = "1.0.0"


[profile.release]
lto = true
