[package]
name = "online-playground"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]


[dependencies]
compiler_core = { path = "../compiler-core" }
wasm-bindgen = "0.2.58"


[dev-dependencies]


[profile.release]
lto = true
