[package]
name = "online-playground"
version = "0.1.0"
authors = ["Sam Rowe <sam.rowe@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]


[dependencies]
compiler_core = { path = "../compiler-core" }
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'Document',
  'CssStyleDeclaration',
  'Element',
  'HtmlElement',
  'HtmlTextAreaElement',
  'Node',
  'Window',
  'EventTarget',
  'InputEvent',
  'console',
]
